packages/jsii/test/negatives/neg.property-name.1.ts
///!MATCH_ERROR: ERROR 'PROP' must use camel-case

export class MyClass {
    PROP?: number;
}
